10-05-19

Tightened RMI concurrency code, Excel controller work to enable the new manual entry forms in plugin

09-05-19

Add download option for XML, fix build error from CSV

08-05-19

Bug fixes, updated ZSS developer license

07-05-19

! Due to cross domain session limitations old session code has been reinstated for the Excel plugin.

Fix bugs in 'bestnamematch'

03-05-19

Bug fixing, removing limit on number of xml files generated

01-05-19

! File handler leak fixed

29-04-19

Report list sort now on Category and Explanation

Further Brokasure XML work, to read data back in. Currently untested.

25-04-19

XML work to export to a directory and for the XML to reference the XLSX file by name

23-04-19

NPE bug fix

18-04-19

Instead of base 64 hashes use simple digits

15-04-19

More flexible file prefixes in XML export

15-04-19

Better xlsx file names in XML zip download

12-04-19

New file type functionality, files with a type are flagged, move with backups, and can be seen for download by normal users

03-04-19

Adjustment to how report categories are stored in backups

02-04-19

Changes to XML file name generation for Broaksure

29-03-19

xls libreoffice convert - requires libreoffice to be installed

27-03-19

'asglobal' works with 'where (' statements

better feedback on number of lines rejected

Bug fixes and better session management on the Excel plugin

12-03-19

Report Category work

07-03-19

Validation option on import templates should mean no validations run on a vanilla import

Can set report categories (though they are not read yet) and bug fix when uploading databases without templates

06-03-19

Add apache commons codec back in, XML scanning of files back from brokasure, standard user upload. Rename contextual menu Debug to Derivation.

27-02-19

Reports with the same name will overwrite, Brokasure XML export and import work

26-02-19

encode all of the json or newer versions of tomcat will complain in js tree
